--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'org.slf4j:jul-to-slf4j:1.7.2'
     compile 'ch.qos.logback:logback-classic:1.0.13'
 
+    compile 'com.google.code.gson:gson:2.2.4'
 
     testCompile('junit:junit:4.11') {
         transitive = false
