--- a/src/main/resources/env/prod/application.properties
+++ b/src/main/resources/env/prod/application.properties
@@ -1,7 +1,7 @@
 version=${project.version}
 hote=http://localhost:8182
-db.host=127.0.0.1
-db.name=graine
-db.user=
-db.password=
-db.port=27017
+db.host=lennon.mongohq.com
+db.name=app24240086
+db.user=heroku
+db.password=_xVDhfWhOPtKuOYFzKGZLeTW01j2PvnrXH5gc1Wl-NNfu_ZAYsa9BdEZtakv_j93u8qscTFUURamnLyNLikEKw
+db.port=10018
