--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'io.vavr:vavr-jackson:0.9.0'
 
     compile "com.auth0:java-jwt:2.1.0"
+    compile 'com.squareup.okhttp3:okhttp:3.8.0'
 
 
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4-rc-3'
