--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
     targetCompatibility = 1.8
     guiceVersion = '4.1.0'
     restEasyVersion = '3.1.3.Final'
+    pac4jVersion = '2.0.0'
 }
 
 
@@ -41,8 +42,9 @@ dependencies {
     compile "org.jboss.resteasy:resteasy-undertow:$restEasyVersion"
     compile "org.jboss.resteasy:resteasy-jackson2-provider:$restEasyVersion"
     compile 'org.cfg4j:cfg4j-core:4.4.0'
-    compile 'org.pac4j:pac4j-jwt:2.0.0'
-    compile 'org.pac4j:jax-rs-pac4j:2.0.0'
+    compile "org.pac4j:pac4j-jwt:$pac4jVersion"
+    compile "org.pac4j:jax-rs-pac4j:$pac4jVersion"
+    compile "org.pac4j:pac4j-http:$pac4jVersion"
 
     compile 'ch.qos.logback:logback-classic:1.1.6'
 
