--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,6 @@ ext {
     targetCompatibility = 1.8
     guiceVersion = '4.1.0'
     restEasyVersion = '3.1.3.Final'
-    pac4jVersion = '2.0.0'
 }
 
 
@@ -42,9 +41,7 @@ dependencies {
     compile "org.jboss.resteasy:resteasy-undertow:$restEasyVersion"
     compile "org.jboss.resteasy:resteasy-jackson2-provider:$restEasyVersion"
     compile 'org.cfg4j:cfg4j-core:4.4.0'
-    compile "org.pac4j:pac4j-jwt:$pac4jVersion"
-    compile "org.pac4j:jax-rs-pac4j:$pac4jVersion"
-    compile "org.pac4j:pac4j-http:$pac4jVersion"
+    compile 'com.auth0:java-jwt:3.2.0'
 
     compile 'ch.qos.logback:logback-classic:1.1.6'
 
