--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     compile "com.auth0:java-jwt:2.1.0"
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
 
+    compile 'com.google.inject.extensions:guice-grapher:4.1.0'
+
 
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4-rc-3'
     testCompile 'com.github.fakemongo:fongo:2.0.7'
